   [T7118]

 * qt: Install headers for Qt 5 and Qt 6 in separate folders.  [T7161]

 * qt: Allow reading the data to decrypt/encrypt/sign/verify directly from
   files.  [T6550]

 * qt: Allow writing the decrypted/encrypted/signed/verified data directly
   to files.  [T6550]

 * qt: Allow specifying import options when importing keys.  [T7152]

 * Interface changes relative to the 1.23.2 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_ENCRYPT_FILE                      NEW.
 GPGME_SIG_MODE_FILE                     NEW.
 gpgme_key_t                             EXTENDED: New field 'revkeys'.
 gpgme_revocation_key_t                  NEW.
 gpgme_set_ctx_flag                      EXTENDED: New flag 'import-options'.
 cpp: Context::EncryptFile               NEW.
 cpp: SignatureMode::SignFile            NEW.
 cpp: RevocationKey                      NEW.
 cpp: Key::revocationKey                 NEW.
 cpp: Key::numRevocationKeys             NEW.
 cpp: Key::revocationKeys                NEW.
 qt: DecryptVerifyJob::setInputFile      NEW.
 qt: DecryptVerifyJob::inputFile         NEW.
 qt: DecryptVerifyJob::setOutputFile     NEW.
 qt: DecryptVerifyJob::outputFile        NEW.
 qt: EncryptJob::setRecipients           NEW.
 qt: EncryptJob::recipients              NEW.
 qt: EncryptJob::setInputFile            NEW.
 qt: EncryptJob::inputFile               NEW.
 qt: EncryptJob::setOutputFile           NEW.
 qt: EncryptJob::outputFile              NEW.
 qt: EncryptJob::setEncryptionFlags      NEW.
 qt: EncryptJob::encryptionFlags         NEW.
 qt: SignEncryptJob::setSigners          NEW.
 qt: SignEncryptJob::signers             NEW.
 qt: SignEncryptJob::setRecipients       NEW.
 qt: SignEncryptJob::recipients          NEW.
 qt: SignEncryptJob::setInputFile        NEW.
 qt: SignEncryptJob::inputFile           NEW.
 qt: SignEncryptJob::setOutputFile       NEW.
 qt: SignEncryptJob::outputFile          NEW.
 qt: SignEncryptJob::setEncryptionFlags  NEW.